--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,12 @@ edition = "2021"
 
 [dependencies]
 raw-window-handle = "0.4.2"
+
+[target.'cfg(target_os = "linux")'.dependencies]
 x11-dl = "2.19.1"
+
+[target.'cfg(target_os = "windows")'.dependencies]
+winapi = "0.3.9"
 
 [dev-dependencies]
 winit = "0.26.1"
