--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,10 @@ x11-dl = "2.19.1"
 [target.'cfg(target_os = "windows")'.dependencies]
 winapi = "0.3.9"
 
+[target.'cfg(target_os = "macos")'.dependencies]
+core-graphics = "0.22.3"
+objc = "0.2.7"
+
 [dev-dependencies]
 winit = "0.26.1"
 image = "0.23.14"
