--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ thiserror = "1.0.30"
 raw-window-handle = "0.4.2"
 
 [target.'cfg(target_os = "linux")'.dependencies]
+tempfile = "3.3.0"
+wayland-client = {version = "0.29", features = ["use_system_lib"], default_features = false}
 x11-dl = "2.19.1"
 
 [target.'cfg(target_os = "windows")'.dependencies]
