--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,17 @@
 [package]
 name = "softbuffer"
-version = "0.0.1"
+version = "0.1.0"
 edition = "2021"
 authors = ["David Johnson <john01dav@gmail.com>"]
 license = "MIT OR Apache-2.0"
 description = "Softbuffer integrates with the raw-window-handle crate to allow writing to a window in a cross-platform way while using the very high quality dedicated window management libraries that are available in the Rust ecosystem."
+documentation = "https://docs.rs/softbuffer"
+readme = "README.md"
+homepage = "https://github.com/john01dav/softbuffer"
+repository = "https://github.com/john01dav/softbuffer"
+keywords = ["framebuffer"]
+categories = ["game-development", "graphics", "gui", "multimedia", "rendering"]
+exclude = ["examples"]
 
 [dependencies]
 thiserror = "1.0.30"
