--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,13 @@ winapi = "0.3.9"
 core-graphics = "0.22.3"
 objc = "0.2.7"
 
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+wasm-bindgen = "0.2.78"
+
+[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
+version = "0.3.55"
+features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "ImageData", "Window"]
+
 [dev-dependencies]
 winit = "0.26.1"
 image = "0.23.14"
