--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,16 @@ version = "0.3.55"
 features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "ImageData", "Window"]
 
 [dev-dependencies]
+instant = "0.1.12"
 winit = "0.26.1"
+
+[dev-dependencies.image]
+version = "0.23.14"
+# Disable rayon on web
+default-features = false
+features = ["jpeg"]
+
+[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
+# Turn rayon back on everywhere else; creating the separate entry resets the features to default.
 image = "0.23.14"
 rayon = "1.5.1"
