--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,9 @@ x11-dl = "2.19.1"
 winapi = "0.3.9"
 
 [target.'cfg(target_os = "macos")'.dependencies]
+cocoa = "0.24.0"
 core-graphics = "0.22.3"
+foreign-types = "0.3.0"
 objc = "0.2.7"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
