--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,9 +22,9 @@ tempfile = "3.3.0"
 wayland-client = {version = "0.29", features = ["use_system_lib"], default_features = false}
 x11-dl = "2.19.1"
 
-[target.'cfg(target_os = "windows")'.dependencies.winapi]
-version = "0.3.9"
-features = ["windef", "wingdi", "winuser"]
+[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
+version = "0.42.0"
+features = ["Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"]
 
 [target.'cfg(target_os = "macos")'.dependencies]
 cocoa = "0.24.0"
