--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,9 @@ thiserror = "1.0.30"
 raw-window-handle = "0.5.0"
 
 [target.'cfg(target_os = "linux")'.dependencies]
-tempfile = "3.3.0"
-wayland-client = {version = "0.29", features = ["use_system_lib"], default_features = false}
+nix = "0.26.1"
+wayland-backend = {version = "0.1.0-beta.14", features = ["client_system"]}
+wayland-client = {version = "0.30.0-beta.14"}
 x11-dl = "2.19.1"
 
 [target.'cfg(target_os = "windows")'.dependencies.winapi]
