--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ exclude = ["examples"]
 thiserror = "1.0.30"
 raw-window-handle = "0.5.0"
 
-[target.'cfg(target_os = "linux")'.dependencies]
+[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
 nix = "0.26.1"
 wayland-backend = {version = "0.1.0-beta.14", features = ["client_system"]}
 wayland-client = {version = "0.30.0-beta.14"}
