--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,18 +15,21 @@ exclude = ["examples"]
 default = ["x11", "wayland", "wayland-dlopen"]
 wayland = ["wayland-backend", "wayland-client", "nix"]
 wayland-dlopen = ["wayland-sys/dlopen"]
-x11 = ["x11-dl"]
+x11 = ["bytemuck", "x11rb", "x11-dl"]
 
 [dependencies]
 thiserror = "1.0.30"
 raw-window-handle = "0.5.0"
+log = "0.4.17"
 
 [target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
 nix = { version = "0.26.1", optional = true }
 wayland-backend = { version = "0.1.0-beta.14", features = ["client_system"], optional = true }
 wayland-client = { version = "0.30.0-beta.14", optional = true }
 wayland-sys = "0.30.0"
+bytemuck = { version = "1.12.3", optional = true }
 x11-dl = { version  = "2.19.1", optional = true }
+x11rb = { version = "0.11.0", features = ["allow-unsafe-code", "dl-libxcb"], optional = true }
 
 [target.'cfg(target_os = "windows")'.dependencies.windows-sys]
 version = "0.42.0"
