--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,8 +24,8 @@ log = "0.4.17"
 
 [target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
 nix = { version = "0.26.1", optional = true }
-wayland-backend = { version = "0.1.0-beta.14", features = ["client_system"], optional = true }
-wayland-client = { version = "0.30.0-beta.14", optional = true }
+wayland-backend = { version = "0.1.0", features = ["client_system"], optional = true }
+wayland-client = { version = "0.30.0", optional = true }
 wayland-sys = "0.30.0"
 bytemuck = { version = "1.12.3", optional = true }
 x11-dl = { version  = "2.19.1", optional = true }
