--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ thiserror = "1.0.30"
 raw-window-handle = "0.5.0"
 log = "0.4.17"
 
-[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "dragonfly", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
+[target.'cfg(all(unix, not(any(target_vendor = "apple", target_os = "android", target_os = "redox"))))'.dependencies]
 nix = { version = "0.26.1", optional = true }
 wayland-backend = { version = "0.1.0", features = ["client_system"], optional = true }
 wayland-client = { version = "0.30.0", optional = true }
@@ -32,7 +32,7 @@ bytemuck = { version = "1.12.3", optional = true }
 x11-dl = { version  = "2.19.1", optional = true }
 x11rb = { version = "0.11.0", features = ["allow-unsafe-code", "dl-libxcb"], optional = true }
 
-[target.'cfg(any(target_os = "dragonfly", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
+[target.'cfg(all(unix, not(any(target_vendor = "apple", target_os = "android", target_os = "redox", target_os = "linux", target_os = "freebsd"))))'.dependencies]
 fastrand = { version = "1.8.0", optional = true }
 
 [target.'cfg(target_os = "windows")'.dependencies.windows-sys]
@@ -54,6 +54,9 @@ features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElemen
 
 [target.'cfg(target_os = "redox")'.dependencies]
 redox_syscall = "0.3"
+
+[build-dependencies]
+cfg_aliases = "0.1.1"
 
 [dev-dependencies]
 instant = "0.1.12"
