--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,17 @@ jobs:
     - name: Check Formatting
       run: cargo +stable fmt --all -- --check
 
+  miri-tests:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: hecrj/setup-rust-action@v1
+      with:
+        rust-version: nightly
+        components: miri
+    - name: Run tests with miri
+      run: cargo +nightly miri test
+
   tests:
     name: Tests
     strategy:
