--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,7 +50,7 @@ wasm-bindgen = "0.2.78"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
 version = "0.3.55"
-features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "ImageData", "Window"]
+features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "ImageData", "OffscreenCanvas", "Window"]
 
 [target.'cfg(target_os = "redox")'.dependencies]
 redox_syscall = "0.3"
