--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,7 @@ foreign-types = "0.3.0"
 objc = "0.2.7"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
+js-sys = "0.3.55"
 wasm-bindgen = "0.2.78"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
