--- a/Cargo.toml
+++ b/Cargo.toml
@@ -79,8 +79,5 @@ members = [
 ]
 
 [patch.crates-io]
-raw-window-handle = { git = "https://github.com/notgull/raw-window-handle.git", branch = "notgull/impl-more", version = "0.5.1" }
+raw-window-handle = { git = "https://github.com/rust-windowing/raw-window-handle.git", version = "0.5.1" }
 winit = { git = "https://github.com/bread-graphics/winit.git", branch = "window-handle", version = "0.28.3" }
-
-[patch.'https://github.com/rust-windowing/raw-window-handle']
-raw-window-handle = { git = "https://github.com/notgull/raw-window-handle.git", branch = "notgull/impl-more", version = "0.5.1" }
