--- a/Cargo.toml
+++ b/Cargo.toml
@@ -85,3 +85,8 @@ rayon = "1.5.1"
 members = [
     "run-wasm",
 ]
+
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
+targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
