--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,6 +68,7 @@ cfg_aliases = "0.1.1"
 [dev-dependencies]
 criterion = { version = "0.4.0", default-features = false, features = ["cargo_bench_support"] }
 instant = "0.1.12"
+inventory = "0.3.5"
 winit = "0.28.1"
 
 [dev-dependencies.image]
@@ -85,6 +86,11 @@ rayon = "1.5.1"
 members = [
     "run-wasm",
 ]
+
+[[test]]
+name = "present_and_fetch"
+path = "tests/present_and_fetch.rs"
+harness = false
 
 [package.metadata.docs.rs]
 all-features = true
