Move fetch() to the surface
Adjust `fetch()` test for Web

Test fixes

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,2 +1,5 @@
 [alias]
 run-wasm = ["run", "--release", "--package", "run-wasm", "--"]
+
+[target.wasm32-unknown-unknown]
+runner = "wasm-bindgen-test-runner"
