--- a/Cargo.toml
+++ b/Cargo.toml
@@ -81,6 +81,9 @@ features = ["jpeg"]
 image = "0.24.6"
 rayon = "1.5.1"
 
+[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
+wasm-bindgen-test = "0.3"
+
 [workspace]
 members = [
     "run-wasm",
