--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,6 +69,7 @@ cfg_aliases = "0.1.1"
 criterion = { version = "0.4.0", default-features = false, features = ["cargo_bench_support"] }
 instant = "0.1.12"
 winit = "0.28.1"
+winit-test = "0.1.0"
 
 [dev-dependencies.image]
 version = "0.24.6"
@@ -81,10 +82,18 @@ features = ["jpeg"]
 image = "0.24.6"
 rayon = "1.5.1"
 
+[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
+wasm-bindgen-test = "0.3"
+
 [workspace]
 members = [
     "run-wasm",
 ]
+
+[[test]]
+name = "present_and_fetch"
+path = "tests/present_and_fetch.rs"
+harness = false
 
 [package.metadata.docs.rs]
 all-features = true
