--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,12 +51,21 @@ foreign-types = "0.3.0"
 objc = "0.2.7"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-js-sys = "0.3.55"
-wasm-bindgen = "0.2.78"
+js-sys = "0.3.63"
+wasm-bindgen = "0.2.86"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
 version = "0.3.55"
-features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "ImageData", "Window"]
+features = [
+    "CanvasRenderingContext2d",
+    "Document",
+    "Element",
+    "HtmlCanvasElement",
+    "ImageData",
+    "OffscreenCanvas",
+    "OffscreenCanvasRenderingContext2d",
+    "Window",
+]
 
 [target.'cfg(target_os = "redox")'.dependencies]
 redox_syscall = "0.3"
