Enable x11-dlopen by default

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ name = "buffer_mut"
 harness = false
 
 [features]
-default = ["x11", "wayland", "wayland-dlopen"]
+default = ["x11", "x11-dlopen", "wayland", "wayland-dlopen"]
 wayland = ["wayland-backend", "wayland-client", "memmap2", "nix", "fastrand"]
 wayland-dlopen = ["wayland-sys/dlopen"]
 x11 = ["as-raw-xcb-connection", "bytemuck", "nix", "tiny-xlib", "x11rb"]
