--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,24 +17,26 @@ name = "buffer_mut"
 harness = false
 
 [features]
-default = ["x11", "wayland", "wayland-dlopen"]
+default = ["x11", "x11-dlopen", "wayland", "wayland-dlopen"]
 wayland = ["wayland-backend", "wayland-client", "memmap2", "nix", "fastrand"]
 wayland-dlopen = ["wayland-sys/dlopen"]
-x11 = ["bytemuck", "nix", "x11rb", "x11-dl"]
+x11 = ["as-raw-xcb-connection", "bytemuck", "nix", "tiny-xlib", "x11rb"]
+x11-dlopen = ["tiny-xlib/dlopen", "x11rb/dl-libxcb"]
 
 [dependencies]
 log = "0.4.17"
 raw-window-handle = "0.5.0"
 
 [target.'cfg(all(unix, not(any(target_vendor = "apple", target_os = "android", target_os = "redox"))))'.dependencies]
+as-raw-xcb-connection = { version = "1.0.0", optional = true }
 bytemuck = { version = "1.12.3", optional = true }
 memmap2 = { version = "0.6.1", optional = true }
 nix = { version = "0.26.1", optional = true }
+tiny-xlib = { version = "0.2.1", optional = true }
 wayland-backend = { version = "0.1.0", features = ["client_system"], optional = true }
 wayland-client = { version = "0.30.0", optional = true }
 wayland-sys = "0.30.0"
-x11-dl = { version  = "2.19.1", optional = true }
-x11rb = { version = "0.12.0", features = ["allow-unsafe-code", "dl-libxcb", "shm"], optional = true }
+x11rb = { version = "0.12.0", features = ["allow-unsafe-code", "shm"], optional = true }
 
 [target.'cfg(all(unix, not(any(target_vendor = "apple", target_os = "android", target_os = "redox", target_os = "linux", target_os = "freebsd"))))'.dependencies]
 fastrand = { version = "1.8.0", optional = true }
