--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ x11-dlopen = ["tiny-xlib/dlopen", "x11rb/dl-libxcb"]
 
 [dependencies]
 log = "0.4.17"
-raw-window-handle = "0.5.0"
+raw_window_handle = { package = "raw-window-handle", version = "0.6", features = ["std"] }
 
 [target.'cfg(all(unix, not(any(target_vendor = "apple", target_os = "android", target_os = "redox"))))'.dependencies]
 as-raw-xcb-connection = { version = "1.0.0", optional = true }
@@ -79,7 +79,7 @@ cfg_aliases = "0.1.1"
 colorous = "1.0.12"
 criterion = { version = "0.4.0", default-features = false, features = ["cargo_bench_support"] }
 instant = "0.1.12"
-winit = "0.28.1"
+winit = "0.29.0-beta.0"
 winit-test = "0.1.0"
 
 [dev-dependencies.image]
@@ -119,3 +119,7 @@ targets = [
     "x86_64-unknown-linux-gnu",
     "wasm32-unknown-unknown",
 ]
+
+[patch.crates-io]
+raw_window_handle = { package = "raw-window-handle", git = "https://github.com/rust-windowing/raw-window-handle.git", branch = "notgull/next" }
+winit = { git = "https://github.com/forkgull/winit.git", branch = "rwh-0.6" }
