Add a DRM/KMS backend
This backend uses DUMB buffers to render to the CRTC.

cc #42

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -4,6 +4,9 @@
 # Apple platforms
 /src/cg.rs          @madsmtm
 
+# DRM/KMS (no maintainer)
+/src/kms.rs
+
 # Redox
 /src/orbital.rs     @jackpot51
 
