--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,8 @@ name = "buffer_mut"
 harness = false
 
 [features]
-default = ["x11", "x11-dlopen", "wayland", "wayland-dlopen"]
+default = ["kms", "x11", "x11-dlopen", "wayland", "wayland-dlopen"]
+kms = ["drm"]
 wayland = ["wayland-backend", "wayland-client", "memmap2", "nix", "fastrand"]
 wayland-dlopen = ["wayland-sys/dlopen"]
 x11 = ["as-raw-xcb-connection", "bytemuck", "nix", "tiny-xlib", "x11rb"]
@@ -30,6 +31,7 @@ raw-window-handle = "0.5.0"
 [target.'cfg(all(unix, not(any(target_vendor = "apple", target_os = "android", target_os = "redox"))))'.dependencies]
 as-raw-xcb-connection = { version = "1.0.0", optional = true }
 bytemuck = { version = "1.12.3", optional = true }
+drm = { version = "0.9.0", default-features = false, optional = true }
 memmap2 = { version = "0.7.1", optional = true }
 nix = { version = "0.26.1", optional = true }
 tiny-xlib = { version = "0.2.1", optional = true }
