feat: Implement Send and Sync for softbuffer types
Previously, types in softbuffer were !Send and !Sync. However it would
be nice if types could be shared across threads. Therefore I've made the
following changes:

- Context<D> is Send+Sync iff D is Send+Sync
- Surface<D, W> is Send iff D is Send+Sync and W is Send
- Buffer<'x, D, W> is Send iff D if Send+Sync and W is Send

Materially, I've made the following changes across the backends:

- X11, Wayland and KMS use Arc for their displays instead of Rc.
- MacOS uses MainThreadBound to secure windowing resources. This
  restriction was already implicitly enforced anyhow.
- Windows creates a thread specifically for allocating and then
  deallocating device contexts. This lets us get around the thread
  affinity problem.

Closes #205

Signed-off-by: John Nunley <dev@notgull.net>
Co-authored-by: Mads Marquart <mads@marquart.dk>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,14 +43,14 @@ x11rb = { version = "0.13.0", features = ["allow-unsafe-code", "shm"], optional 
 
 [target.'cfg(target_os = "windows")'.dependencies.windows-sys]
 version = "0.52.0"
-features = ["Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"]
+features = ["Win32_Graphics_Gdi", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"]
 
 [target.'cfg(target_os = "macos")'.dependencies]
 bytemuck = { version = "1.12.3", features = ["extern_crate_alloc"] }
 core-graphics = "0.23.1"
 foreign-types = "0.5.0"
 objc2 = "0.5.1"
-objc2-foundation = { version = "0.2.0", features = ["NSThread"] }
+objc2-foundation = { version = "0.2.0", features = ["dispatch", "NSThread"] }
 objc2-app-kit = { version = "0.2.0", features = ["NSResponder", "NSView", "NSWindow"] }
 objc2-quartz-core = { version = "0.2.0", features = ["CALayer", "CATransaction"] }
 
