Avoid the explicit CATransaction commit
This effectively desyncs the surface from the rest of the window, which
isn't desirable when resizing. Instead, we now commit in the implicit
transaction that happens at the end of the current runloop iteration.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -114,6 +114,7 @@ objc2-foundation = { version = "0.3.2", default-features = false, features = [
     "NSString",
     "NSThread",
     "NSValue",
+    "NSNull",
 ] }
 objc2-quartz-core = { version = "0.3.2", default-features = false, features = [
     "std",
