Rewrite introductory documentation
Provide motivation and recommend `tiny-skia` and `vello_cpu` for drawing
primitives.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ members = ["run-wasm"]
 name = "softbuffer"
 version = "0.4.8"
 edition = "2021"
-description = "Cross-platform software buffer"
+description = "Cross-platform buffer for software rendering"
 license = "MIT OR Apache-2.0"
 documentation = "https://docs.rs/softbuffer"
 repository = "https://github.com/rust-windowing/softbuffer"
