Rename buffer_mut -> next_buffer
There isn't a use-case for an immutable `buffer()` method, so the "mut"
suffix is kinda unnecessary, and "next" a bit more clearly communicates
that `softbuffer::Surface` potentially contains more than one buffer.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -167,7 +167,7 @@ name = "winit_multithread_android"
 crate-type = ["cdylib"]
 
 [[bench]]
-name = "buffer_mut"
+name = "buffer"
 harness = false
 
 [dev-dependencies]
